[package]
name = "rusty_igdb"
version = "1.0.0"
edition = "2021"
description = "A simple IGDB (Internet Game Database) API wrapper for Rust users"
repository = "https://github.com/yurypcf/igdb"
authors = ["yurypcfarias@gmail.com"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = [
  "game",
  "character",
  "genre",
  "platform",
  "collection",
  "theme",
]
game = []
character = []
genre = []
platform = []
collection = []
theme = []
